[bugfix] PullRefresh overflow

--- a/packages/vant-css/src/pull-refresh.css
+++ b/packages/vant-css/src/pull-refresh.css
@@ -3,6 +3,7 @@
 .van-pull-refresh {
   user-select: none;
   position: relative;
+  overflow: hidden;
 
   &__head {
     width: 100%;
